# QtOgreFramework

./: CMakeLists.txt  CREDITS.txt  Install.txt  KnownIssues.txt  License.txt  QtOgreFramework.pro  Readme.txt  TODO.txt  settings.pro
Demo/: CMakeLists.txt  Demo.pro  plugins.cfg.in  settings.ini.in
Demo/include/: ChooseMeshWidget.h  DemoGameLogic.h  StyleSettingsWidget.h
Demo/media/scenes/: test.scene
Demo/source/: DemoGameLogic.cpp  MainMenu.cpp  Mouse.cpp  StyleSettingsWidget.cpp  main.cpp
EngineTest/: CMakeLists.txt  plugins_d.cfg.in  settings.ini
EngineTest/include/: Camera.h  CameraWrapper.h  ChooseMeshWidget.h  EngineTestGameLogic.h  Entity.h  Light.h  MainMenu.h  Mouse.h  Object.h  ScriptEditorWidget.h
EngineTest/media/scenes/: test.scene
EngineTest/media/scripts/: update.js
EngineTest/source/: Camera.cpp  CameraWrapper.cpp  ChooseMeshWidget.cpp  DemoGameLogic.cpp  EngineTestGameLogic.cpp  Entity.cpp  Light.cpp  Mouse.cpp  Object.cpp  ScriptEditorWidget.cpp  main.cpp
EngineTest/ui/: ScriptEditorWidget.ui
QtOgre/: CMakeLists.txt  Doxyfile.in  Mainpage.dox  QtOgreConfig.cmake.in  QtOgreConfigVersion.cmake.in  ogre.tag  qt.tag  qtogre.pro
QtOgre/include/: AbstractSettingsWidget.h  Application.h  DotSceneHandler.h  EventHandler.h  EventHandlingOgreWidget.h  FPSDialog.h  GameLogic.h  GraphicsSettingsWidget.h  Log.h  LogEntry.h  LogLevel.h  LogManager.h  LogModel.h  LogModelSortFilterProxy.h  OgreWidget.h  SettingsDialog.h
QtOgre/include/Scripting/: OgreCameraClass.h  OgreCameraPrototype.h  OgreRadianClass.h  OgreRadianPrototype.h  OgreVector3Class.h  OgreVector3Prototype.h
QtOgre/source/: AbstractSettingsWidget.cpp  Application.cpp  DotSceneHandler.cpp  EventHandlingOgreWidget.cpp  FPSDialog.cpp  GameLogic.cpp  GraphicsSettingsWidget.cpp  Log.cpp  LogEntry.cpp  LogManager.cpp  LogModel.cpp  LogModelSortFilterProxy.cpp  OgreWidget.cpp  SettingsDialog.cpp
QtOgre/source/Scripting/: OgreCameraClass.cpp  OgreCameraPrototype.cpp  OgreRadianClass.cpp  OgreRadianPrototype.cpp  OgreVector3Class.cpp  OgreVector3Prototype.cpp
QtOgre/ui/: Log.ui
cmake/modules/: FindOGRE.cmake
